--- a/public/style.css
+++ b/public/style.css
@@ -44,24 +44,10 @@ h2{
   display: flex;
   flex-direction:column;
   justify-content: space-between;
-  margin: 20px;
-}
-
-.post-card {
-  width: calc(33.33% - 10px);
-  margin-bottom: 20px;
-  background-color: #fff;
-  border-radius: 5px;
-  box-shadow: 0px 3px 5px rgba(0, 0, 0, 0.2);
   
 }
 
 
-.post-card p {
-  margin: 0;
-  padding: 10px 20px;
-  font-size: 1rem;
-}
 
 .post-card button {
   display: block;
@@ -82,23 +68,14 @@ h2{
   box-shadow: 0px 3px 5px rgba(0, 0, 0, 0.2);
 }
 
-.posts-container {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  margin: 20px;
-}
+
 
 .post-card {
-  width: calc(33.33% - 10px);
-  margin-bottom: 20px;
-  background-color: #fff;
+  border: 1px solid #ccc;
   border-radius: 5px;
-  box-shadow: 0px 3px 5px rgba(0, 0, 0, 0.2);
-  
+  padding: 1rem;
+  margin-bottom: 1rem;
 }
-
-
 
 
 .post-card p {
